[package]
name = "tipsea-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tipsea_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
spl-token = "3.3.0"
solana-program = "^1.10.27"
mpl-token-metadata = {version = "1.3.1", features = ["no-entrypoint"]}