[package]
name = "tipsea_solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tipsea_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
solana-program = "^1.10.29"
mpl-token-metadata = {version = "1.4.3", features = ["no-entrypoint"]}